--- a/src/app/pages/employee-form/employee-form.component.html
+++ b/src/app/pages/employee-form/employee-form.component.html
@@ -1,1 +1,281 @@
-<p>employee-form works!</p>
+<div class="container">
+    <div class="container-fluid">
+        <section>
+            <div class="row">
+                <div class="col-12 col-lg-6 col-md-6 col-sm-6">
+                    <div>
+                        <img src="assets/images/basicLogo/techspawn.png" alt="" style="width: 50%; margin-left: -7%;">
+                    </div>
+                    <div class="main-header mt-5">
+                        <div>
+                            One Stop Shop For All
+                        </div>
+                        <div>
+                            Your Online Business Needs
+                        </div>
+                    </div>
+                    <div class="header mt-3">
+                        Angular, ReactJs, NextJs, PHP, WordPress, Android App, iOS App
+                    </div>
+                    <div class="mt-5">
+                        <img src="assets/images/basicLogo/blue_dots.svg" alt="">
+                        <img src="assets/images/basicLogo/desktop.png" alt="" style="width: 70%;">
+                    </div>
+
+                </div>
+                <div class="col-12 col-lg-6 col-md-6 col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="sub-header" style="display: flex; justify-content: center;">
+                                Add Employee Details
+                            </div>
+
+                            <form [formGroup]="employeeDetailForm">
+                                <div class="row">
+                                    <div class="col-12 col-lg-6 col-md-6 col-sm-6 mt-3">
+                                        <span class="square-input-box">
+                                            <input type="text" class="input-field" type="text"
+                                                formControlName="employeeId" placeholder="Employee Id*" />
+                                        </span>
+                                        <p class="error-message" *ngIf="employeeId.invalid && isSubmited">
+                                            Employee Id is Required
+                                        </p>
+                                    </div>
+
+                                    <div class="col-12 col-lg-6 col-md-6 col-sm-6 mt-3">
+                                        <span class="square-input-box">
+                                            <input type="text" class="input-field" type="text" formControlName="name"
+                                                placeholder="Name*" />
+                                        </span>
+                                        <p class="error-message" *ngIf="name.invalid && isSubmited">
+                                            Name is Required
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-12 col-lg-12 col-md-12 col-sm-12 mt-3">
+                                        <span class="square-input-box">
+                                            <input type="text" class="input-field" type="email" formControlName="email"
+                                                placeholder="Work Email*" />
+                                        </span>
+                                        <p class="error-message" *ngIf="email.invalid && isSubmited">
+                                            Email is Required
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-12 col-lg-6 col-md-6 col-sm-6 mt-3">
+                                        <span class="square-input-box">
+                                            <input type="text" class="input-field" type="number"
+                                                formControlName="mobileNumber" placeholder="Mobile Number*" />
+                                        </span>
+                                        <p class="error-message" *ngIf="mobileNumber.invalid && isSubmited">
+                                            Mobile Number is Required
+                                        </p>
+                                    </div>
+                                    <div class="col-12 col-lg-6 col-md-6 col-sm-6 mt-3">
+                                        <span class="square-input-box">
+                                            <input type="text" class="input-field" type="date" formControlName="dob"
+                                                placeholder="Date of Birth" />
+                                        </span>
+                                        <p class="error-message" *ngIf="dob.invalid && isSubmited">
+                                            Date of Birth is Required
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-12 col-lg-6 col-md-6 col-sm-6 mt-3">
+                                        <span class="square-input-box">
+                                            <input type="text" class="input-field" type="password"
+                                                formControlName="password" placeholder="Password*" />
+                                        </span>
+                                        <p class="error-message" *ngIf="password.invalid && isSubmited">
+                                            Password is Required
+                                        </p>
+                                    </div>
+                                    <div class="col-12 col-lg-6 col-md-6 col-sm-6 mt-3">
+                                        <span class="square-input-box">
+                                            <input type="text" class="input-field" type="password"
+                                                formControlName="confirmedPassword" placeholder="Confirmed Password*" />
+                                        </span>
+                                        <p class="error-message" *ngIf="confirmedPassword.invalid && isSubmited">
+                                            Confirmed Password is Required
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-12 col-lg-12 col-md-12 col-sm-12 mt-3">
+                                        <span class="square-input-box">
+                                            <textarea name="" id="" cols="10" rows="3" class="input-field" type="text"
+                                                formControlName="address" placeholder="Address*"></textarea>
+                                        </span>
+                                        <p class="error-message" *ngIf="confirmedPassword.invalid && isSubmited">
+                                            Address Password is Required
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-12 col-lg-12 col-md-12 col-sm-12 mt-3"
+                                        style="display: flex; justify-content: center;">
+                                        <button class="btn btn-secondary trial-btn w-100" (click)="submitUserDetails()">
+                                            SAVE
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
+
+<section class="mt-5">
+    <div class="second-section">
+        <div class="our-offer">
+            Our Offer: Intelligent Automation. Real-time Insights. Unparalleled Results.
+        </div>
+        <img src="assets/images/basicLogo/second_section_bg.svg" alt="" style="width: 100%;">
+
+    </div>
+</section>
+<section class="third-section">
+    <div class="row" style="padding: 5%; margin-top: 6%;">
+        <div class="col-12 col-lg-6 col-md-6 col-sm-6">
+            <div style="font-size: 30px;">
+                <b>
+                    The <span style="color: #38CCF5;">Benefits</span> of using TechSpawn
+                </b>
+            </div>
+        </div>
+        <div class="col-12 col-lg-6 col-md-6 col-sm-6">
+            <div class="d-flex">
+                <div class="mr-4">
+                    <img src="assets/images/basicLogo/checkmark_logo.svg" alt="" style="width: 75%;">
+                </div>
+                <div style="font-size: 18px;">
+                    Ability to scale using Dexter, our AI-powered marketing genius.
+                </div>
+            </div>
+            <div class="d-flex mt-4">
+                <div class="mr-4">
+                    <img src="assets/images/basicLogo/checkmark_logo.svg" alt="" style="width: 135%;">
+                </div>
+                <div style="font-size: 18px;">
+                    Client Success Manager who will optimize your Facebook ad campaigns and focus on driving the best
+                    possible results for you.
+                </div>
+            </div>
+            <div class="d-flex mt-4">
+                <div class="mr-4">
+                    <img src="assets/images/basicLogo/checkmark_logo.svg" alt="" style="width: 75%;">
+                </div>
+                <div style="font-size: 18px;">
+                    This is a limited time offer only.
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<section>
+    <div class="gradient">
+        <div class="row" style="padding: 5%;">
+            <div class="col-12 col-lg-4 col-md-4 col-sm-4 mb-2">
+                <div class="d-flex">
+                    <div class="mr-5 mt-2">
+                        <img src="assets/images/basicLogo/blogquotes_logo.svg" alt="" style="width: 120%;">
+                    </div>
+                    <div class="blog-quotes">
+                        <p class="p-0 m-0">"It surpassed our</p>
+                        <p class="p-0 m-0">expectations"</p>
+                    </div>
+                </div>
+                <div class="description mt-5">
+                    <div>
+                        "TechSpawn has completely surpassed our expectations. I will refer everyone I know. Filed is
+                        worth
+                        much more than I paid."
+                    </div>
+                </div>
+                <div class="d-flex mt-5">
+                    <div>
+                        <img src="assets/images/basicLogo/dummy_profile_logo.png" alt="" class="profile-picture">
+                    </div>
+                    <div class="ml-5 mt-4">
+                        <div><b class="fs-18" style="color: white;">Tania Y. </b></div>
+                        <div style="color: white; font-size: 16px;">
+                            <i> Flexi Content @Hello</i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 col-md-4 col-sm-4 mb-2">
+                <div class="d-flex">
+                    <div class="mr-5 mt-2">
+                        <img src="assets/images/basicLogo/blogquotes_logo.svg" alt="" style="width: 120%;">
+                    </div>
+                    <div class="blog-quotes">
+                        <p class="p-0 m-0">"It surpassed our</p>
+                        <p class="p-0 m-0">expectations"</p>
+                    </div>
+                </div>
+                <div class="description mt-5">
+                    <div>
+                        TechSpawn is the most valuable business resource we have EVER purchased. I was amazed at the
+                        quality of filed. We were treated like royalty.”
+                    </div>
+                </div>
+                <div class="d-flex mt-5">
+                    <div>
+                        <img src="assets/images/basicLogo/dummy_profile_logo.png" alt="" class="profile-picture">
+                    </div>
+                    <div class="ml-5 mt-4">
+                        <div><b class="fs-18" style="color: white;">Tania Y. </b></div>
+                        <div style="color: white; font-size: 16px;">
+                            <i> Flexi Content @Hello</i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 col-md-4 col-sm-4 mb-2">
+                <div class="d-flex">
+                    <div class="mr-5 mt-2">
+                        <img src="assets/images/basicLogo/blogquotes_logo.svg" alt="" style="width: 120%;">
+                    </div>
+                    <div class="blog-quotes">
+                        <p class="p-0 m-0">"It surpassed our</p>
+                        <p class="p-0 m-0">expectations"</p>
+                    </div>
+                </div>
+                <div class="description mt-5">
+                    <div>
+                        “The service was excellent. After using filed my business skyrocketed! It really saves me time
+                        and effort.”
+                    </div>
+                </div>
+                <div class="d-flex mt-5">
+                    <div>
+                        <img src="assets/images/basicLogo/dummy_profile_logo.png" alt="" class="profile-picture">
+                    </div>
+                    <div class="ml-5 mt-4">
+                        <div><b class="fs-18" style="color: white;">Tania Y. </b></div>
+                        <div style="color: white; font-size: 16px;">
+                            <i> Flexi Content @Hello</i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<section>
+    <app-footer></app-footer>
+</section>
