delete employee by id added

--- a/src/app/pages/employee-detail/employee-detail.component.html
+++ b/src/app/pages/employee-detail/employee-detail.component.html
@@ -11,7 +11,7 @@
                 <span class="ml-3" *ngIf="empyleeService.loading$ | async">Loading...</span>
             </div>
 
-            <table class="table table-striped">
+            <table class="table table-striped text-center">
                 <thead>
                     <tr>
                         <th scope="col" sortable="employeeId" (sort)="onSort($event)">Employee Id</th>
@@ -24,35 +24,37 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let schoolProfile of schoolProfiles$ | async;let i = index">
+                    <tr *ngFor="let employeeProfile of employeeProfiles$ | async;let i = index">
                         <td>
-                            <ngb-highlight [result]="schoolProfile.employeeId" [term]="empyleeService.searchTerm">
+                            <ngb-highlight [result]="employeeProfile.employeeId" [term]="empyleeService.searchTerm">
                             </ngb-highlight>
                         </td>
                         <td>
-                            <ngb-highlight [result]="schoolProfile.name" [term]="empyleeService.searchTerm">
+                            <ngb-highlight [result]="employeeProfile.name" [term]="empyleeService.searchTerm">
                             </ngb-highlight>
                         </td>
                         <td>
-                            <ngb-highlight [result]="schoolProfile.email" [term]="empyleeService.searchTerm">
+                            <ngb-highlight [result]="employeeProfile.email" [term]="empyleeService.searchTerm">
                             </ngb-highlight>
                         </td>
                         <td>
-                            <ngb-highlight [result]="schoolProfile.dob" [term]="empyleeService.searchTerm">
+                            <ngb-highlight [result]="employeeProfile.dob" [term]="empyleeService.searchTerm">
                             </ngb-highlight>
                         </td>
                         <td>
-                            <ngb-highlight [result]="schoolProfile.mobileNumber | number"
+                            <ngb-highlight [result]="employeeProfile.mobileNumber | number"
                                 [term]="empyleeService.searchTerm">
                             </ngb-highlight>
                         </td>
 
                         <td>
-                            <ngb-highlight [result]="schoolProfile.address" [term]="empyleeService.searchTerm">
+                            <ngb-highlight [result]="employeeProfile.address" [term]="empyleeService.searchTerm">
                             </ngb-highlight>
                         </td>
                         <td>
-                            <button class="btn btn-secondary">View Detail</button>
+                            <button class="btn btn-secondary" (click)="deleteEmployeeById(i)">Delete</button>
+                            <button class="btn btn-secondary">View</button>
+
                         </td>
                     </tr>
                 </tbody>
