service is removed for sorting, filtering and pagination

--- a/src/app/pages/employee-detail/employee-detail.component.html
+++ b/src/app/pages/employee-detail/employee-detail.component.html
@@ -7,8 +7,8 @@
         <form>
             <div class="form-group form-inline">
                 Full text search: <input class="form-control ml-2" type="text" name="searchTerm"
-                    [(ngModel)]="empyleeService.searchTerm" />
-                <span class="ml-3" *ngIf="empyleeService.loading$ | async">Loading...</span>
+                    [(ngModel)]="searchTerm" />
+                <span class="ml-3" *ngIf="loading$ | async">Loading...</span>
             </div>
 
             <table class="table table-striped text-center">
@@ -26,29 +26,28 @@
                 <tbody>
                     <tr *ngFor="let employeeProfile of employeeProfiles$ | async;let i = index">
                         <td>
-                            <ngb-highlight [result]="employeeProfile.employeeId" [term]="empyleeService.searchTerm">
+                            <ngb-highlight [result]="employeeProfile.employeeId" [term]="searchTerm">
                             </ngb-highlight>
                         </td>
                         <td>
-                            <ngb-highlight [result]="employeeProfile.name" [term]="empyleeService.searchTerm">
+                            <ngb-highlight [result]="employeeProfile.name" [term]="searchTerm">
                             </ngb-highlight>
                         </td>
                         <td>
-                            <ngb-highlight [result]="employeeProfile.email" [term]="empyleeService.searchTerm">
+                            <ngb-highlight [result]="employeeProfile.email" [term]="searchTerm">
                             </ngb-highlight>
                         </td>
                         <td>
-                            <ngb-highlight [result]="employeeProfile.dob" [term]="empyleeService.searchTerm">
+                            <ngb-highlight [result]="employeeProfile.dob" [term]="searchTerm">
                             </ngb-highlight>
                         </td>
                         <td>
-                            <ngb-highlight [result]="employeeProfile.mobileNumber | number"
-                                [term]="empyleeService.searchTerm">
+                            <ngb-highlight [result]="employeeProfile.mobileNumber | number" [term]="searchTerm">
                             </ngb-highlight>
                         </td>
 
                         <td>
-                            <ngb-highlight [result]="employeeProfile.address" [term]="empyleeService.searchTerm">
+                            <ngb-highlight [result]="employeeProfile.address" [term]="searchTerm">
                             </ngb-highlight>
                         </td>
                         <td>
@@ -61,11 +60,10 @@
             </table>
 
             <div class="d-flex justify-content-between p-2">
-                <ngb-pagination [collectionSize]="(total$ | async)!" [(page)]="empyleeService.page"
-                    [pageSize]="empyleeService.pageSize">
+                <ngb-pagination [collectionSize]="(total$ | async)!" [(page)]="page" [pageSize]="pageSize">
                 </ngb-pagination>
 
-                <select class="custom-select" style="width: auto" name="pageSize" [(ngModel)]="empyleeService.pageSize">
+                <select class="custom-select" style="width: auto" name="pageSize" [(ngModel)]="pageSize">
                     <option [ngValue]="2">2 items per page</option>
                     <option [ngValue]="4">4 items per page</option>
                     <option [ngValue]="6">6 items per page</option>
