routing for single question by id added

--- a/src/app/pages/employee-detail/employee-detail.component.html
+++ b/src/app/pages/employee-detail/employee-detail.component.html
@@ -52,7 +52,7 @@
                         </td>
                         <td>
                             <button class="btn btn-secondary" (click)="deleteEmployeeById(i)">Delete</button>
-                            <button class="btn btn-secondary">View</button>
+                            <button class="btn btn-secondary" [routerLink]="[employeeProfile.id]">View</button>
 
                         </td>
                     </tr>
