--- a/src/app/pages/employee-detail-by-id/employee-detail-by-id.component.html
+++ b/src/app/pages/employee-detail-by-id/employee-detail-by-id.component.html
@@ -1,1 +1,17 @@
-<p>employee-detail-by-id works!</p>
+<div class="container">
+    <div class="container-fluid">
+        <div class="card text-white bg-info mb-3" style="max-width: 18rem;" *ngIf="employeeDetails">
+            <div class="card-header">{{employeeDetails.name | uppercase}}</div>
+            <div class="card-body">
+                <h6 class="card-title">
+                    <div>{{employeeDetails.dob}}</div>
+                    <div>{{employeeDetails.mobileNumber}}</div>
+                    <div>{{employeeDetails.email}}</div>
+                </h6>
+                <p class="card-text">
+                    {{employeeDetails.address}}
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
