--- a/src/app/pages/employee-detail-by-id/employee-detail-by-id.component.html
+++ b/src/app/pages/employee-detail-by-id/employee-detail-by-id.component.html
@@ -11,7 +11,7 @@
                         </div>
                         <div class="mt-2">
                             <b> DOB : </b>
-                            <i>{{employeeDetails.dob}}</i>
+                            <i>{{employeeDetails.dob | date: 'dd-mm-yyyy'}}</i>
                         </div>
                         <i>{{employeeDetails.email}}</i>
                     </div>
