form layout changed

--- a/src/app/pages/employee-detail/employee-detail.component.html
+++ b/src/app/pages/employee-detail/employee-detail.component.html
@@ -38,11 +38,11 @@
                             </ngb-highlight>
                         </td>
                         <td>
-                            <ngb-highlight [result]="employeeProfile.dob" [term]="searchTerm">
+                            <ngb-highlight [result]="employeeProfile.dob " [term]="searchTerm">
                             </ngb-highlight>
                         </td>
                         <td>
-                            <ngb-highlight [result]="employeeProfile.mobileNumber | number" [term]="searchTerm">
+                            <ngb-highlight [result]="employeeProfile.mobileNumber" [term]="searchTerm">
                             </ngb-highlight>
                         </td>
 
